# Universal-Integer-System

./: LICENSE  README.md  contributing.md  pyproject.toml
.github/: ci.yaml
docs/: cryptic.md
src/: pre-commit-config.yaml
src/core/: discovery.py  self_sustaining.py  test_discovery.py  tests.py  universal_integer_system.py
src/transports/pulsar/: config.py  health_server.py  metrics.py  pulsar_client.py  pulsar_connection_manager.py  pulsar_consumer.py  pulsar_manager.py  pulsar_producer.py  py_logger.py  security.py  uis.py
